# parse-perrypedia

./: .gitignore  parse_perrypedia.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
parse_perrypedia/: __init__.py  main.py  parse.py  parse_perrypedia.py  upload.py
