[tool.poetry]
name = "parse-perrypedia"
version = "0.1.0"
description = "Parse descriptions of Perry Rhodan episodes from perrypedia.de and print them in a format that makes it easy to transfer them to goodreads.com descriptions"
authors = ["Lene Preuss <lene.preuss@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
lxml = "^4.6.3"
EbookLib = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parse = "parse_perrypedia.main:main"
